{
    "name": "GameInput",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "72194ec1-4639-497b-8af1-57daa402689b",
            "actions": [
                {
                    "name": "MovementDir",
                    "type": "Value",
                    "id": "9e002a9f-1784-408d-8c21-fca5e8742f41",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "9b21edab-f821-4037-91e2-62e8736c844f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Dir",
                    "id": "e6d22f7b-3b4c-4467-9c1f-42f025bcbea6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementDir",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "faee6866-9faf-4dcc-b07b-48826308ed1c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "MovementDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f5f7b24a-e386-40c8-8404-f4281ca079c8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "MovementDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bd837a75-4204-4679-9ab8-967241ba4489",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "MovementDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "09af52c5-05f1-4fef-b49c-e5ceeb8480bf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "MovementDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "85a9ba0a-ac6a-4cf5-a129-a3207a590d17",
                    "path": "<Mouse>/{Point}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Desktop",
            "bindingGroup": "Desktop",
            "devices": [
                {
                    "devicePath": "<Keyboard>/{Hatswitch}",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>/{Back}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}